--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,8 +9,10 @@
                 "/EHsc",
                 "/Zi",
                 "/Fe:",
-                "./build/dbg/test.exe",
-                "main.cpp"
+                "/Fd:%BuildPath%\\vc140.pdb",
+                "/Fo:%BuildPath%\\%TargetName%.obj",
+                "main.cpp",
+                "/OUT:%BuildPath%\\%TargetName%"
             ],
             "group": {
                 "kind": "build",
@@ -21,17 +23,11 @@
             },
             "problemMatcher": "$msCompile"
         },
-        {
-            "type": "shell",
-            "label": "cl.exe build active file",
-            "command": "cl.exe",
-            "args": [
-                "/Zi",
-                "/EHsc",
-                "/Fe:",
-                "${fileDirname}\\${fileBasenameNoExtension}.exe",
-                "${file}"
-            ]
+    ],
+    "options": {
+        "env": {
+            "BuildPath": "\\build\\win32",
+            "TargetName": "solid-fiesta"
         }
-    ]
+    }
 }
